--- a/src/AspNetCore.WebClient/Pages/Shared/_Layout.cshtml
+++ b/src/AspNetCore.WebClient/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/SignOut">Sign out</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/WebAPI">Web API</a>
+                        </li>
                     </ul>
                 </div>
             </div>
